[project]
name = "pfund-kit"
version = "0.1.11"
description = "Configuration, CLI, and shared utilities for packages in pfund's ecosystem"
license = "Apache-2.0"
readme = "README.md"
authors = [
    { name = "Stephen Yau", email = "softwareentrepreneer+pfund-kit@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "rich>=13.7.1",
    "tqdm>=4.66.2",
    "click>=8.1.7",
    "trogon>=0.6.0 ; sys_platform != 'emscripten'",
    "pyyaml>=6.0.2",
    "tomlkit>=0.15.0",
    "packaging>=24.2",
    # "platformdirs>=4.3.6",
    "python-dotenv>=1.2.2",
    "prompt-toolkit>=3.0.43",
]

[project.scripts]
pfund-shell = "pfund_kit.pfund_shell.main:start_shell"

[project.urls]
homepage = "https://pfund.ai"
repository = "https://github.com/PFund-Software-Ltd/pfund-kit"
# documentation = ""

[build-system]
requires = ["uv_build>=0.11.26,<0.12.0"]
build-backend = "uv_build"

[tool.pyright]
typeCheckingMode = "basic"
# reportAny = false
# reportExplicitAny = false

[tool.uv.build-backend]
module-name = "pfund_kit"
module-root = "src"
